--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="intro-right">
                         <h1>Miért jó a judo?</h1>
                         <p>
-                            A júdó nem csupán egy küzdősport – egy életre szóló nevelési eszköz. Szakosztályunkban a gyermekek játékos, biztonságos formában ismerkedhetnek meg ezzel a japán eredetű sportággal, amely egyszerre fejleszti a testet és a szellemet. A júdó különösen hasznos a gyerekek számára, mert fejleszti a mozgáskoordinációt, az egyensúlyérzéket és a hajlékonyságot, miközben erősíti az önfegyelmet, a kitartást és az önbizalmat is. Segít a szabályok elfogadásában, valamint a mások iránti tisztelet kialakításában.
+                            A júdó nem csupán egy küzdősport, egy életre szóló nevelési eszköz. Szakosztályunkban a gyermekek játékos, biztonságos formában ismerkedhetnek meg ezzel a japán eredetű sportággal, amely egyszerre fejleszti a testet és a szellemet. A júdó különösen hasznos a gyerekek számára, mert fejleszti a mozgáskoordinációt, az egyensúlyérzéket és a hajlékonyságot, miközben erősíti az önfegyelmet, a kitartást és az önbizalmat is. Segít a szabályok elfogadásában, valamint a mások iránti tisztelet kialakításában.
                         </p>
                         <p>
                             Emellett közösségformáló ereje is kiemelkedő, hiszen a gyerekek együtt tanulnak, edzenek és fejlődnek. Edzéseink során kiemelten fontosnak tartjuk a biztonságot, a fokozatosságot és a jó hangulatot. Várunk minden érdeklődőt, aki szeretné kipróbálni magát és fejlődni egy támogató közösségben!
@@ -69,7 +69,7 @@
                     <div class="class-card">
                         <h2>Ovis - Kisiskolás csoport</h2>
                         <div class="class-text">
-                            <p>Vidám, játékos edzések 5–8 éves gyermekeknek, ahol a mozgás öröme és az alapvető judo készségek elsajátítása áll a középpontban. A gyerekek megtanulják az esések biztonságos technikáját, fejlesztik koordinációjukat, egyensúlyérzéküket és koncentrációjukat egy támogató és biztonságos közegben.</p>
+                            <p>Vidám, játékos edzések 4–8 éves gyermekeknek, ahol a mozgás öröme és az alapvető judo készségek elsajátítása áll a középpontban. A gyerekek megtanulják az esések biztonságos technikáját, fejlesztik koordinációjukat, egyensúlyérzéküket és koncentrációjukat egy támogató és biztonságos közegben.</p>
                         </div>
                         <div class="class-times">
                             <p>Kedd: 17:00–18:00</p>
@@ -90,7 +90,7 @@
                     <div class="class-card">
                         <h2>Felnőtt csoport</h2>
                         <div class="class-text">
-                            <p>Edzéseink felnőtteknek szólnak, legyen szó teljesen kezdőkről, újrakezdőkről vagy haladó szinten sportolókról. Az edzések intenzitása és technikai tartalma az egyéni szinthez igazodik – így mindenki a saját tempójában fejlődhet. A cél az erőnlét fejlesztése, technikai tudás bővítése és a küzdősport iránti szenvedély elmélyítése egy támogató, motiváló közösségben.</p>
+                            <p>Edzéseink felnőtteknek szólnak, legyen szó teljesen kezdőkről, újrakezdőkről vagy haladó szinten sportolókról. Az edzések intenzitása és technikai tartalma az egyéni szinthez igazodik, így mindenki a saját tempójában fejlődhet. A cél az erőnlét fejlesztése, technikai tudás bővítése és a küzdősport iránti szenvedély elmélyítése egy támogató, motiváló közösségben.</p>
                         </div>
                         <div class="class-times">
                             <p>Hétfő és Csütörtok: 18:30-20:00</p>
@@ -129,13 +129,14 @@
                         <td data-label="Edzések gyakorisága:">Heti 2-3 alkalom</td>
                         <td data-label="Havi díj:">
                             <p>15.000 Ft</p>
-                            <p>23.000 Ft - (testvérpár kedvezmény)</p>
+                            <p>24.000 Ft - (testvérpár kedvezmény)</p>
+                            <p>31.000 Ft - (testvérhármas kedvezmény)</p>
                         </td>
                         </tr>
                         <tr>
                         <td data-label="Korcsoport:">Felnőtt</td>
                         <td data-label="Edzések gyakorisága:">Heti 2 alkalom</td>
-                        <td data-label="Havi díj:">21.000 Ft</td>
+                        <td data-label="Havi díj:">17.500 Ft</td>
                         </tr>
                         <tr>
                         <td data-label="Korcsoport:">Gimnasztika minden korosztálynak</td>
