--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="sectionHero">
                 <div class="hero-left">
                     <h1>Fedezd fel a judo erejét</h1>
-                    <p class="subtitle">A KAC Judo szakosztályában nemcsak küzdeni, de fejlődni is megtanulsz – testben és lélekben. Legyél részese egy összetartó, fegyelmezett és inspiráló közösségnek!</p>
+                    <p class="subtitle">A KAC Judo szakosztályában nemcsak küzdeni, de fejlődni is megtanulsz, testben és lélekben egyaránt. Legyél részese egy összetartó, fegyelmezett és inspiráló közösségnek!</p>
                     <div class="hero-btn-wrapper">
                         <button class="hero-btn" onclick="scrollToSection('intro')">Tudj meg többet</button>
                     </div>
@@ -198,6 +198,12 @@
                     <button class="faq-question">Milyen felszerelés szükséges az első edzéshez?</button>
                     <div class="faq-answer">
                     <p>Az első alkalommal elegendő egy melegítő vagy kényelmes sportöltözet és egy pár papucs. Üdítőnek kizárólag víz vihető a terembe, jól záródó flakonban.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question">Honnan tudok judo ruhát szerezni?</button>
+                    <div class="faq-answer">
+                    <p>Kezdő ruha beszerzésére a Decathlont szoktuk javasolni, de nekünk is vannak használt ruháink korlátozott mennyiségben és méretekben, amelyeket </p>
                     </div>
                 </div>
                 <div class="faq-item">
