--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                     <div class="footer-links">
                         <p><strong>Gyorslinkek:</strong></p>
                         <a href="#classes">Edzések</a> |
-                        <a href="#prices">Áraink</a> |
-                        <a href="#coach">Edzőink</a> |
+                        <a href="#prices">Árak</a> |
+                        <a href="#coach">Edzők</a> |
                         <a href="#FAQ">GYIK</a>
                     </div>
 
