--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="hero" class="scroll-offset">
             <div class="sectionHero">
                 <div class="hero-left">
-                    <h1>Fedezd fel a judo erejét</h1>
+                    <h1>FEDEZD FEL A JUDO EREJÉT</h1>
                     <p class="subtitle">A KAC Judo szakosztályában nemcsak küzdeni, de fejlődni is megtanulsz, testben és lélekben egyaránt. Legyél részese egy összetartó, fegyelmezett és inspiráló közösségnek!</p>
                     <div class="hero-btn-wrapper">
                         <button class="hero-btn" onclick="scrollToSection('intro')">Tudj meg többet</button>
@@ -324,5 +324,6 @@
 
 </body>
 </html>
+
 
 
