--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
                     <div class="footer-social">
                         <p><strong>Kövess minket:</strong></p>
-                        <a href="https://facebook.com/judoklub" target="_blank" aria-label="Facebook">
+                        <a href="https://facebook.com/groups/1002475360128951/" target="_blank" aria-label="Facebook">
                         <i class="fab fa-facebook fa-lg"></i>
                         </a>
                         <a href="#" target="_blank" aria-label="Instagram">
@@ -324,6 +324,7 @@
 
 </body>
 </html>
+
 
 
 
