--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 
                     <div class="footer-contact">
                         <p><strong>Cím:</strong> 1194 Budapest, Katona József u. 3</p>
-                        <p><strong>Telefon:</strong> +36 30 123 4567</p>
-                        <p><strong>Email:</strong> info@judoklub.hu</p>
+                        <p><strong>Telefon:</strong> +36 20 934 5391 | +36 20 230 1238 | +36 20 257 4768</p>
+                        <p><strong>Email:</strong> judokispest@gmail.com</p>
                     </div>
 
                     <div class="footer-hours">
@@ -324,6 +324,7 @@
 
 </body>
 </html>
+
 
 
 
