--- a/index.html
+++ b/index.html
@@ -178,12 +178,17 @@
                         <p>Szakosztályvezető, 6 danos mester, 30+ év edzői és testnevelői tapasztalat. Ifi és felnőtt csoportok edzője.</p>
                     </div>
                     <div class="coach-card">
-                        <img src="coach2.png" alt="Coach 2" />
+                        <img src="placeholder-male.jpg" alt="Coach 2" />
                         <h2>Kardos Csaba</h2>
                         <p>6 danos mester, iskolás csoportok edzője és utánpótlás nevelés szakértője.</p>
                     </div>
                     <div class="coach-card">
-                        <img src="coach3.jpg" alt="Coach 3" />
+                        <img src="placeholder-female.jpg" alt="Coach 3" />
+                        <h2>Hodos Tímea</h2>
+                        <p>2 danos mester, Reménység Katolikus Általános Iskola és Óvoda kihelyezett edzője.</p>
+                    </div>
+                    <div class="coach-card">
+                        <img src="coach3.jpg" alt="Coach 4" />
                         <h2>Mukri Martin</h2>
                         <p>1 kyu, ovisok és kis iskolások edzője.</p>
                     </div>
@@ -324,6 +329,7 @@
 
 </body>
 </html>
+
 
 
 
