--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
                     <div class="coach-card">
                         <img src="placeholder-female.jpg" alt="Coach 3" />
-                        <h2>Hodos Tímea</h2>
+                        <h2>Varga-Hodos Tímea</h2>
                         <p>2 danos mester, Reménység Katolikus Általános Iskola és Óvoda kihelyezett edzője.</p>
                     </div>
                     <div class="coach-card">
@@ -329,6 +329,7 @@
 
 </body>
 </html>
+
 
 
 
