--- a/index.html
+++ b/index.html
@@ -180,17 +180,17 @@
                     <div class="coach-card">
                         <img src="placeholder-male.jpg" alt="Coach 2" />
                         <h2>Kardos Csaba</h2>
-                        <p>6 danos mester, iskolás csoportok edzője és utánpótlás nevelés szakértője.</p>
+                        <p>6 danos mester. Iskolás csoportok edzője és utánpótlás nevelés szakértője.</p>
                     </div>
                     <div class="coach-card">
                         <img src="placeholder-female.jpg" alt="Coach 3" />
                         <h2>Varga-Hodos Tímea</h2>
-                        <p>2 danos mester, Reménység Katolikus Általános Iskola és Óvoda kihelyezett edzője.</p>
+                        <p>2 danos mester. A KAC örökös bajnoka, kétszeres Kadet Világkupa bronzérmes, többszörös magyar - és országos diákolimpiai bajnok. Reménység Katolikus Általános Iskola és Óvoda kihelyezett edzője.</p>
                     </div>
                     <div class="coach-card">
                         <img src="coach3.jpg" alt="Coach 4" />
                         <h2>Mukri Martin</h2>
-                        <p>1 kyu, ovisok és kis iskolások edzője.</p>
+                        <p>1 kyu. Ovisok és kis iskolások edzője.</p>
                     </div>
                 </div>
             </div>
@@ -329,6 +329,7 @@
 
 </body>
 </html>
+
 
 
 
