Maps link updated in index.html

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
                 <div class="footer-map">
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2698.752993850686!2d19.147989076097765!3d47.43625957117464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741c28944c74487%3A0xe5e4af9065b1b9e7!2sTichy%20Lajos%20Sportcentrum!5e0!3m2!1shu!2shu!4v1753788126771!5m2!1shu!2shu"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2698.7590766352323!2d19.148381676117243!3d47.43614097117467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741c3003239ab37%3A0x607389f47ec9c2d3!2sKAC%20Judo!5e0!3m2!1sen!2shu!4v1754915908816!5m2!1sen!2shu"
                     width="100%" 
                     height="100%" 
                     style="border:0;" 
@@ -338,6 +338,7 @@
 
 </body>
 </html>
+
 
 
 
