--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <p>Szakosztályvezető, 6 danos mester, 30+ év edzői és testnevelői tapasztalat. Ifi és felnőtt csoportok edzője.</p>
                     </div>
                     <div class="coach-card">
-                        <img src="placeholder-male.jpg" alt="Coach 2" />
+                        <img src="coach2.png" alt="Coach 2" />
                         <h2>Kardos Csaba</h2>
                         <p>6 danos mester. Iskolás csoportok edzője és utánpótlás nevelés szakértője.</p>
                     </div>
@@ -197,7 +197,7 @@
                         <p>2 danos mester. A KAC örökös bajnoka, kétszeres Kadet Világkupa bronzérmes, többszörös magyar - és országos diákolimpiai bajnok. Reménység Katolikus Általános Iskola és Óvoda kihelyezett edzője.</p>
                     </div>
                     <div class="coach-card">
-                        <img src="coach3.jpg" alt="Coach 4" />
+                        <img src="coach4.png" alt="Coach 4" />
                         <h2>Mukri Martin</h2>
                         <p>1 kyu. Ovisok és kisiskolások edzője.</p>
                     </div>
@@ -338,6 +338,7 @@
 
 </body>
 </html>
+
 
 
 
