--- a/index.html
+++ b/index.html
@@ -184,22 +184,22 @@
                     <div class="coach-card">
                         <img src="coach1.png" alt="Coach 1" />
                         <h2>Jobbágy István</h2>
-                        <p>Szakosztályvezető, 6 danos mester, 30+ év edzői és testnevelői tapasztalat. Ifi és felnőtt csoportok edzője.</p>
+                        <p>Szakosztályvezető, 6. Dan. 30+ év edzői és testnevelői tapasztalat. Ifi és felnőtt csoportok edzője.</p>
                     </div>
                     <div class="coach-card">
                         <img src="coach2.png" alt="Coach 2" />
                         <h2>Kardos Csaba</h2>
-                        <p>6 danos mester. Iskolás csoportok edzője és utánpótlás nevelés szakértője.</p>
+                        <p>6. Dan. Iskolás csoportok edzője és utánpótlás nevelés szakértője.</p>
                     </div>
                     <div class="coach-card">
                         <img src="placeholder-female.jpg" alt="Coach 3" />
                         <h2>Varga-Hodos Tímea</h2>
-                        <p>2 danos mester. A KAC örökös bajnoka, kétszeres Kadet Világkupa bronzérmes, többszörös magyar - és országos diákolimpiai bajnok. Reménység Katolikus Általános Iskola és Óvoda kihelyezett edzője.</p>
+                        <p>2. Dan. A KAC örökös bajnoka, kétszeres Kadet Világkupa bronzérmes, többszörös magyar - és országos diákolimpiai bajnok. Reménység Katolikus Általános Iskola és Óvoda kihelyezett edzője.</p>
                     </div>
                     <div class="coach-card">
                         <img src="coach4.png" alt="Coach 4" />
                         <h2>Mukri Martin</h2>
-                        <p>1 kyu. Ovisok és kisiskolások edzője.</p>
+                        <p>1. Kyu. Ovisok és kisiskolások edzője.</p>
                     </div>
                 </div>
             </div>
@@ -338,6 +338,7 @@
 
 </body>
 </html>
+
 
 
 
