--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <p>Vidám, játékos edzések 4–8 éves gyermekeknek, ahol a mozgás öröme és az alapvető judo készségek elsajátítása áll a középpontban. A gyerekek megtanulják az esések biztonságos technikáját, fejlesztik koordinációjukat, egyensúlyérzéküket és koncentrációjukat egy támogató és biztonságos közegben.</p>
                         </div>
                         <div class="class-times">
-                            <p>Kedd: 17:00–18:00</p>
+                            <p>Szerda: 18:00–19:00</p>
                             <p>Péntek: 16:30–17:30</p>
                         </div>
                         <button onclick="scrollToSection('footer')">Érdekel</button>
